# Weekend-Plan-Builder

./: .gitignore  README.md
backend/: index.py  main.py  pyproject.toml
backend/src/: agent.py
backend/src/tools/: backend.py  frontend.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: PreferencesForm.tsx  WeekendPlanView.tsx
frontend/src/types/: index.ts
